Added Main Java class for JMS Bridge Reliability

--- a/config.properties
+++ b/config.properties
@@ -5,6 +5,7 @@ sleepTime=0
 header=esbTrackingId
 persistent=true
 queue.in=test.in
-queue.out=test
-messageFile=message.xml
+queue.out=test.in
+finalWaitTime=5000
+#messageFile=message.xml
 detailedResultsFile=results.csv
